--- a/src/style/style.css
+++ b/src/style/style.css
@@ -55,6 +55,10 @@ body {
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+.icohome {
+  width: 50px; /* Ajuste o valor conforme necessário */
+  height: 50px; /* Ajuste o valor conforme necessário */
+}
 
 @media (max-width: 992px) {
   .navbar-nav .nav-link {
